new featured songs n album!

--- a/doqmeat/music/index.html
+++ b/doqmeat/music/index.html
@@ -68,6 +68,7 @@
 
     <div id="updates" class="box">
       <h3>updates</h3>
+      <p><b>23.may.25</b> - new featured and album once again!</p>
       <p><b>28.feb.25</b> - new featured song &amp; album :-)</p>
       <p><b>08.feb.25</b> - new listening log: <a href="listening-log/2025/index.html#1" target="mainframe">DeBÍ TiRAR MáS FOToS</a></p>
       <p><b>26.jan.25</b> - added <a href="links.html" target="mainframe">related links</a> page</p>
@@ -94,15 +95,19 @@
     <div id="featured" class="box">
       <h3>featured song &amp; album</h3>
       <div class="song">
+        <p>gonna be highlighting some songs discovered through a friend's radio broadcast section: <i>miku music</i>! i've been a bit obsessed with them this past 2 months.</p>
+        <h4><b>アプリコット (apricot)</b> - iyowa</h4>
+        <iframe width="864" height="486" src="https://www.youtube.com/embed/_uMDEIPgmFI?list=PLJJj3iCewWn3lE58jWAfouzXZ7Nz2zvKF" title="アプリコット / いよわ feat.初音ミク（apricot / iyowa feat.Hatsune Miku）" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <h4><b>水死体は恋したい</b> - LonePi</h4>
+        <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/JV--KBO5bgM?si=xjFkNZsdLGLEelNz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <h4><b>ウエンディ</b> - Yoh Kamiyama</h4>
         <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/YvNB8V1IfMY?si=7pmAQQDX1_8MkGwt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        <p>discovered through a friend's radio broadcast section: <i>miku music</i>! i love how fun it is. it honestly makes me wanna do a little dance.</p>
       </div>
       <div class="lp">
-        <h4><b>kirara</b> - kirara</h4>
-        <iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=4082560632/size=large/bgcol=ffffff/linkcol=63b2cc/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://stqpkiraradongjae.bandcamp.com/album/kirara">KIRARA by KIRARA</a></iframe>
-        <p>an insanely fun house album by korean indie artist KIRARA. i need to listen to more of her stuff. it's kinda great for studying in my experience. this is just very silly and nice to listen to. there's also a very nice selection of guest here with only 5/14 being instrumental ones at that. while still in relative the same soundscape there's a lot of variety in the songs as well.</p>
-        <p><b>highlights:</b>bird's eye view, outside earth, music, love me</p>
+        <h4><b>in your languages</b> - yuragi</h4>
+        <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/HKCSMVJjJyU?si=NkWLiBhnsI11jdCt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <p>a very lovely album to me. really like the heavy feel of it.</p>
+        <p><b>highlights:</b> oppressed</p>
       </div>
       <hr>
 
@@ -140,7 +145,7 @@
     <footer id="foot" class="box">
       <img src="/collection/internet-graphics/!g/matry.gif" alt="matryoshka gumi" style="margin:15px 5px" align="left">
       <img src="/collection/internet-graphics/!g/orka.gif" alt="matryoshka miku" style="margin:15px 5px" align="right">
-      last updated on 28.feb.25
+      last updated on 23.may.25
       <br>
       <b>credit:</b>
       bg is a scan from <a title="archive.org img link" href="https://archive.org/details/yume-no-manimani-scans/13-page.png" target="_blank">siinamota's yume no manimani</a> album booklet, art by <a title="meisa's website" href="http://hathune39.web.fc2.com/" target="_blank">meisa</a>
