--- a/doqmeat/music/featured.html
+++ b/doqmeat/music/featured.html
@@ -66,7 +66,29 @@ iframe2
 -->
 		<details open>
 			<summary>
-				<span class="date">28.feb.25 - ? : love lightside / KIRARA</span>
+				<span class="date">23.may.25 - ? : アプリコット - 水死体は恋したい - ウエンディ / in your languages</span>
+			</summary>
+			<table>
+				<td class="t-left">
+					<p>gonna be highlighting some songs discovered through a friend's radio broadcast section: <i>miku music</i>! i've been a bit obsessed with them this past 2 months.</p>
+					<p><b>アプリコット (apricot)</b> - iyowa</p>
+					<iframe width="864" height="486" src="https://www.youtube.com/embed/_uMDEIPgmFI?list=PLJJj3iCewWn3lE58jWAfouzXZ7Nz2zvKF" title="アプリコット / いよわ feat.初音ミク（apricot / iyowa feat.Hatsune Miku）" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+					<p><b>水死体は恋したい</b> - LonePi</p>
+					<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/JV--KBO5bgM?si=xjFkNZsdLGLEelNz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+					<p><b>ウエンディ</b> - Yoh Kamiyama</p>
+					<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/YvNB8V1IfMY?si=7pmAQQDX1_8MkGwt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+				</td>
+				<td class="t-right">
+					<p><b>in your languages</b> - yuragi</p>
+					<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/HKCSMVJjJyU?si=NkWLiBhnsI11jdCt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+					<p>a very lovely album to me. really like the heavy feel of it.</p>
+					<p><b>highlights:</b> oppressed</p>
+				</td>
+			</table>
+		</details>
+		<details>
+			<summary>
+				<span class="date">28.feb.25 - 23.may.25 : love lightside / KIRARA</span>
 			</summary>
 			<table>
 				<td class="t-left">
