added link to harmony music my beloved

--- a/doqmeat/music/info.html
+++ b/doqmeat/music/info.html
@@ -39,7 +39,7 @@
 		<p>itunes annoyed the fuck out of me one day so i switched to <a href="https://getwacup.com/" target="_blank">WACUP</a> for my <b>music player</b> and i've never looked back. look how cute...</p>
 		<center><img src="!g/index/wacup.jpg" alt="a screenshot of my wacup music player" width="90%"></center>
 
-		<p>when it comes to <b>streaming</b> stuff, i use bandcamp or youtube preferably. if not, i use <a href="https://www.xmanagerapp.com/" target="_blank" class="outlink">this</a> on my phone :) if i enjoy an album or EP A LOT i'll try to get the <a title="my CD collection" href="cds.html" target="_blank">CD</a> if my bank acc lets me. if not, i'll get it digitally.</p>
+		<p>when it comes to <b>streaming</b> stuff, i use bandcamp, youtube or <a title="this open source project literally saved my life" href="https://github.com/anandnet/Harmony-Music" target="_blank" class="outlink">harmony music</a> on my phone :) if i enjoy an album or EP A LOT i'll try to get the <a title="my CD collection" href="cds.html" target="_blank">CD</a> if my bank acc lets me.</p>
 
 		<h3>misc</h3>
 		<p>i run a <a title="currently a WIP!" href="https://siinamota.doqmeat.com/" target="_blank" class="outlink">siinamota fansite</a>, he is my favorite vocaloid producer and i highly recommend his stuff if you enjoy vocaloid. i also run the <a href="https://siinamota.doqmeat.com/bot" target="_blank" class="outlink">siinamota song bot</a> on twitter.</p>
