--- a/doqmeat/music/index.html
+++ b/doqmeat/music/index.html
@@ -40,7 +40,7 @@
       <h4>pages</h4>
       <a href="songs/index.html">fav artists n genres</a>
       <a href="fav-albums.html">fav albums</a>
-      <a href="cds.html">CD collection</a>
+      <a href="cds/index.html">CD collection</a>
 
       <h4>mini-pages</h4>
       <a href="info.html" target="mainframe">info</a>
