--- a/doqmeat/sitemap.html
+++ b/doqmeat/sitemap.html
@@ -64,7 +64,7 @@
 				<a href="/music/featured.html" target="_parent">featured music</a>
 				<br />
 				↳
-				<a href="/music/cds.html" target="_parent">cd collection</a>
+				<a href="/music/cds/index.html" target="_parent">cd collection</a>
 				<br />
 				↳
 				<a href="/music/playlists.html" target="_parent">playlists</a>
