fixing broken links on sitemap

--- a/doqmeat/sitemap.html
+++ b/doqmeat/sitemap.html
@@ -150,17 +150,17 @@
 				<li><b>sitely</b></li>
 				<ul>
 					↳
-					<a href="/notebook/graphics.html" target="_parent">sitemap</a>
+					<a href="/notebook/sitely/graphics.html" target="_parent">sitemap</a>
 					(you're here!)
 					<br />
 					↳
-					<a href="/notebook/tools.html" target="_parent">tools</a>
+					<a href="/notebook/sitely/tools.html" target="_parent">tools</a>
 					<br />
 					↳
-					<a href="/notebook/info.html" target="_parent">site info</a>
+					<a href="/notebook/sitely/info.html" target="_parent">site info</a>
 					<br />
 					↳
-					<a href="/notebook/graphics.html" target="_parent">graphics</a>
+					<a href="/notebook/sitely/graphics.html" target="_parent">graphics</a>
 				</ul>
 				<li><b>F2U</b></li>
 				<ul>
