new page for infinity nikki

--- a/doqmeat/vgs/index.html
+++ b/doqmeat/vgs/index.html
@@ -63,6 +63,7 @@ coded with love by des
 					<button class="btn g" onclick="filterSelection('vn')">visual novel</button>
 					<button class="btn g" onclick="filterSelection('cat')">cats</button>
 					<button class="btn g" onclick="filterSelection('rhythm')">rhythm</button>
+					<button class="btn g" onclick="filterSelection('online')">online</button>
 				</div>
 			</center>
 		</div>
@@ -88,7 +89,7 @@ coded with love by des
 		<div class="thumb toplay action">
 			<a title="bayonetta origins: cereza and the lost demon" href="games/bayonetta-origins/index.html" target="log"><img src="games/bayonetta-origins/cover.jpg" tabindex="0"></a>
 		</div>
-		<div class="thumb adv action notdone horror">
+		<div class="thumb adv action notdone currently horror">
 			<a title="bloodborne" href="games/bloodborne/index.html" target="log"><img src="games/bloodborne/cover.jpg" tabindex="0"></a>
 		</div>
 		<div class="thumb">
@@ -133,7 +134,7 @@ coded with love by des
 		<div class="thumb horror adventure">
 			<a title="fatum betula" href="games/fatum-betula/index.html" target="log"><img src="games/fatum-betula/cover.jpg" tabindex="0" alt="fatum betula"></a>
 		</div>
-		<div class="thumb action">
+		<div class="thumb online action">
 			<a title="fortnite" href="games/fortnite/index.html" target="log"><img src="games/fortnite/fortnite.jpg" tabindex="0"></a>
 		</div>
 		<div class="thumb fav finished adventure plat">
@@ -151,13 +152,16 @@ coded with love by des
 		<div class="thumb finished action">
 			<a title="infamous second son" href="games/infamous-2nd-son/index.html" target="log"><img src="games/infamous-2nd-son/cover.jpg" tabindex="0"></a>
 		</div>
+		<div class="thumb currently online">
+			<a title="infinity nikki" href="games/infinity-nikki/index.html" target="log"><img src="games/infinity-nikki/cover.jpg" tabindex="0" alt="infinity nikki page link"></a>
+		</div>
 		<div class="thumb toplay">
 			<a title="jet set radio" href="games/jet-set-radio/index.html" target="log"><img src="games/jet-set-radio/cover.jpg" tabindex="0"></a>
 		</div>
 		<div class="thumb cat fav adv finished">
 			<a title="journey" href="games/journey/index.html" target="log"><img src="games/journey/cover.jpg" tabindex="0"></a>
 		</div>
-		<div class="thumb notdone currently platformer">
+		<div class="thumb notdone platformer">
 			<a title="kirby planet robobot" href="games/kirby-planet-robobot/index.html" target="log"><img src="games/kirby-planet-robobot/cover.jpg" alt="kirby planet robobot" tabindex="0"></a>
 		</div>
 		<div class="thumb finished vn horror">
@@ -206,7 +210,7 @@ coded with love by des
 		<div class="thumb cat fav finished adv">
 			<a title="stray" href="games/stray/index.html" target="log"><img src="games/stray/cover.jpg" tabindex="0"></a>
 		</div>
-		<div class="thumb sim  currently finished fav">
+		<div class="thumb sim finished fav">
 			<a title="style savvy: trendsetters" href="games/style-savvy-trendsetters/index.html" target="log"><img src="games/style-savvy-trendsetters/cover.png" tabindex="0"></a>
 		</div>
 		<div class="thumb sim currently notdone">
