minor changes to about

--- a/doqmeat/about/index.html
+++ b/doqmeat/about/index.html
@@ -128,25 +128,21 @@
 		<div class="borderwrap">
 			<div class="wrapper-in padding">
 				<p><img title="this is me btw" src="/!g/deco/silly-cat.gif" align="left" style="margin-right:5px;" width="25%">
-					the name is <mark>des</mark> <a title="click for source!" href="https://caitsith.neocities.org/graphics1" target="_blank"><img src="!g/bi.gif" alt="bi pixel flag"><img src="!g/nonbinary.gif" alt="nonbinary pixel flag"></a> i'm a 24 years old from puerto rico. fluent in english and spanish. he / she <u title="él / ella en español">*</u> pronouns. computer science student <img src="/!g/pix/heart4.png" alt=""> i also have a beautiful girlfriend who i love very much!</p>
+					the name is <mark>des</mark> <a title="click for source!" href="https://caitsith.neocities.org/graphics1" target="_blank"><img src="!g/bi.gif" alt="bi pixel flag"><img src="!g/nonbinary.gif" alt="nonbinary pixel flag"></a> i'm a 24 years old from puerto rico. fluent in english and spanish. he / she <u title="él / ella en español">*</u> pronouns. computer science student interested in web development and web design <img src="/!g/pix/heart4.png" alt=""> i love life</p>
 
 				<p>（*＾-＾*）this is also me -&gt; <img src="/collection/internet-graphics/!g/silly-blinkie.gif" style="max-width:100%;" alt="silly blinkie :3"></p>
 
-				<p><a title="art by bitmapdreams" href="http://lastsecret.net/bitmapdreams/" target="_blank"><img src="/!g/deco/springflowers.gif" width="20%" align="right"></a>i think that's pretty much it when it comes to about me <img src="/!g/pix/emote1emba.gif" alt=""> hopefully you can get an idea of who i am by exploring my site, which i pour a lot of myself and love into <img src="/!g/pix/catroll.gif"> in the future i might have more to say about myself. </p>
+				<p><a title="art by bitmapdreams" href="http://lastsecret.net/bitmapdreams/" target="_blank"><img src="/!g/deco/springflowers.gif" width="20%" align="right"></a>i enjoy listening to music, walking, messing around with code, petting my cat, and kissing my girlfriend.</p>
+				<p>this site started as something to mess around with when bored around april 2023 but as time passed i fell more and more in love with the idea of having a space where i can customize every corner of it and call it my home. i am mostly here to share my thoughts and have fun!</p>
 
-				<p><img src="/!g/deco/mail.gif" align="left" style="margin-right:15px;">i'm pretty introverted, but i am friendly and love to interact with other people. feel free to e-mail me at <a href="mailto:&#x6d;&#x65;&#x6f;&#x77;&commat;&#x64;&#x6f;&#x71;&#x6d;&#x65;&#x61;&#x74;&period;&#x63;&#x6f;&#x6d;" target="_blank">&#x6d;&#x65;&#x6f;&#x77;&commat;&#x64;&#x6f;&#x71;&#x6d;&#x65;&#x61;&#x74;&period;&#x63;&#x6f;&#x6d;</a> about whatever, really! whether it be to tell me about what you thought about my site, to send me pictures of your cats, recommend me an album you think i might like, or even ask any coding / website related questions you might have. i might take a while to answer back but anything goes, thank you very much for reading!</p>
+				<p><img src="/!g/deco/mail.gif" align="left" style="margin-right:15px;">i won't reach out fast but do feel free to e-mail me at <a href="mailto:&#x6d;&#x65;&#x6f;&#x77;&commat;&#x64;&#x6f;&#x71;&#x6d;&#x65;&#x61;&#x74;&period;&#x63;&#x6f;&#x6d;" target="_blank">&#x6d;&#x65;&#x6f;&#x77;&commat;&#x64;&#x6f;&#x71;&#x6d;&#x65;&#x61;&#x74;&period;&#x63;&#x6f;&#x6d;</a> about whatever, really! whether it be to tell me about what you thought about my site, to send me pictures of your cats, recommend me an album you think i might like, or even ask any coding / website related questions you might have. i might take a while to answer back but anything goes, thank you very much for reading!</p>
 
-				<h3>why did i build this site?</h3>
-				<p>one day i stumbled upon <a href="https://hunipyon.neocities.org/" target="_blank">hunipyon</a>'s site and it kinda opened my eyes to what having your space on the internet could be. so i started my HTML/CSS journey all the way from the bottom around april 2023 in hopes to create something!</p>
-				<p>i like keeping track of things and talking about what i love. i started this page out of boredom one day but then i just fell in love with every aspect of having your very own site where you can literally do whatever the fuck you want. that is pretty much the foundations that my site is built upon. to have fun and be unabashedly me.</p>
-
-				<p style="text-align: right"><b>last updated on: 02.mar.25</b></p>
+				<p style="text-align: right"><b>last updated on: 25.may.25</b></p>
 			</div>
 		</div>
 	</div>
 
 	<!-- 	me af pics -->
-	<!-- make this a gallery view where the pic pops up on a window on click -->
 	<div id="me" class="draggable">
 		<div class="header"><img src="!g/folder.png" class="folder"> me_irl<img onclick="closeBox('me')" src="!g/close.jpg" alt="close button" class="closebtn himg"><img src="!g/max.jpg" class="himg"><img src="!g/hide.jpg" class="himg"></div>
 		<div class="borderwrap">
@@ -362,14 +358,10 @@
 				<a title="e-mail me!" href="mailto:&#x6d;&#x65;&#x6f;&#x77;&commat;&#x64;&#x6f;&#x71;&#x6d;&#x65;&#x61;&#x74;&period;&#x63;&#x6f;&#x6d;"><img src="/!g/pix/mail11a.gif" align="left" style="margin-right:15px;margin-top:5px;margin-left:10px;"></a>
 				<li><a title="all of my projects have repositories here!" href="https://github.com/doqmeat" target="_blank">github</a></li>
 				<li><a title="here til the site gets inevitably nuked" href="https://twitter.com/sepiarecord999" target="_blank">twitter</a></li>
-				<li><a title="twitter replacement" href="https://bsky.app/profile/doqmeat.com" target="_blank">bluesky</a></li>
-				<li><a title="i LOVE logging on what i listen to" href="https://rateyourmusic.com/~doqmeat" target="_blank">RYM</a></li>
+				<li><a title="i LOVE logging on what i listen to" href="https://rateyourmusic.com/~doqmeat" target="_blank">rate your music</a></li>
 				<li><a href="https://doqmeats.tumblr.com/" target="_blank">tumblr</a></li>
-				<li><a href="https://sepiarecord999.tumblr.com" target="_blank">art tumblr</a></li>
 				<li><a title="i LOVE logging on what i watch" href="https://letterboxd.com/Iakitu/" target="_blank">letterboxd</a></li>
 				<li><a title="might be using it again" href="https://www.youtube.com/@doqmeat" target="_blank">youtube</a></li>
-				<li><a title="i rarely stream" href="https://www.twitch.tv/doqmeats" target="_blank">twitch</a></li>
-				<li><a href="https://www.last.fm/user/lakiitu" target="_blank">last.fm</a></li>
 				<li><a title="you can support me here!" href="https://ko-fi.com/doqmeat" target="_blank">ko-fi</a></li>
 			</div>
 		</div>
