--- a/doqmeat/faq/index.html
+++ b/doqmeat/faq/index.html
@@ -2,48 +2,53 @@
 <html lang="en">
 
 <head>
- <meta charset="UTF-8">
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>FAQ</title>
- <link rel="icon" type="image/x-icon" href="/!g/pix/question-mark.gif">
- <link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
- <link href="body.css" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>FAQ</title>
+  <link rel="icon" type="image/x-icon" href="/!g/pix/question-mark.gif">
+  <link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
+  <link href="body.css" rel="stylesheet">
 </head>
 
 <body>
- <main>
-  <h1>frequently asked questions</h1>
-  <p>been noticing i get a lot of emails with similar questions i decided to make this page so i can redirect people here instead of typing the same e-mail again and again <img src="/!g/pix/heart2.gif" alt=""></p>
-  <p id="1" class="q">i want to make a website but i have no clue on where to start.</p>
+  <main>
+    <h1>frequently asked questions</h1>
+    <p>been noticing i get a lot of emails with similar questions i decided to make this page so i can redirect people here instead of typing the same e-mail again and again <img src="/!g/pix/heart2.gif" alt=""></p>
+    <p id="4" class="q">what did you use to make text appear when you hover over something?</p>
+    <p class="a">that's a tooltip!!! i use malihu's <a href="https://manos.malihu.gr/style-my-tooltips-jquery-plugin/" target="_blank">Style-my-tooltips jQuery plugin</a></p>
+    <p id="3" class="q">what made you start building your own site?</p>
+    <p class="a">one day i stumbled upon <a href="https://hunipyon.neocities.org/" target="_blank">hunipyon</a>'s site and it kinda opened my eyes to what having your space on the internet could be. so i started my HTML/CSS journey all the way from the bottom around april 2023 in hopes to create something!</p>
+    <p class="a">i like keeping track of things and talking about what i love. i started this page out of boredom one day but then i just fell in love with every aspect of having your very own site where you can literally do whatever the fuck you want. that is pretty much the foundations that my site is built upon. to have fun and be unabashedly me.</p>
+    <p id="2" class="q">i want to make a website but i have no clue on where to start.</p>
 
-  <p class="a">these are the main 3 "languages" you'll be working with when coding webpages</p>
-  <ul>
-   <li><u>HTML</u> stands for <i>Hyper Text Markup Language</i>. this is the writing code of a webpage. all of your text will be here</li>
-   <li><u>CSS</u> stands for <i>Cascading Style Sheets</i>. this is what gives color and form to a webpage. you style your site with this!</li>
-   <li><u>JS</u> stands for <i>JavaScript</i>. this is what makes a webpage interactable! once you are VERY comfortable with HTML and CSS, i recommend looking up JS tutorials. but for now, you can just ignore this one!</li>
-  </ul>
+    <p class="a">these are the main 3 "languages" you'll be working with when coding webpages</p>
+    <ul>
+      <li><u>HTML</u> stands for <i>Hyper Text Markup Language</i>. this is the writing code of a webpage. all of your text will be here</li>
+      <li><u>CSS</u> stands for <i>Cascading Style Sheets</i>. this is what gives color and form to a webpage. you style your site with this!</li>
+      <li><u>JS</u> stands for <i>JavaScript</i>. this is what makes a webpage interactable! once you are VERY comfortable with HTML and CSS, i recommend looking up JS tutorials. but for now, you can just ignore this one!</li>
+    </ul>
 
-  <p class="a">i basically got the hang of <u>HTML</u> and <u>CSS</u> as i was actively working on my site. when i started my site, i had no clue how HTML or CSS worked but that was the most exciting part. i used <a href="/notebook/links/index.html#layouts">free templates</a> and googled every little thing that i didn't know about! using templates and messing around with them made it wayy easier to eventually understand what each little thing does. i def recommend using free HTML templates if you have 0 clue of what you're doing!</p>
+    <p class="a">i basically got the hang of <u>HTML</u> and <u>CSS</u> as i was actively working on my site. when i started my site, i had no clue how HTML or CSS worked but that was the most exciting part. i used <a href="/notebook/links/index.html#layouts">free templates</a> and googled every little thing that i didn't know about! using templates and messing around with them made it wayy easier to eventually understand what each little thing does. i def recommend using free HTML templates if you have 0 clue of what you're doing!</p>
 
-  <p class="a">i also recommend looking into different <a href="/notebook/links/index.html#editor">code editors</a> and seeing which ones you like the best! that way you can mess around and build your code offline before putting it live on your site.</p>
+    <p class="a">i also recommend looking into different <a href="/notebook/links/index.html#editor">code editors</a> and seeing which ones you like the best! that way you can mess around and build your code offline before putting it live on your site.</p>
 
-  <p class="a">while googling things will usually get you want you want, i also spent a lot of time on sites that have a lot of documentation when it comes to building websites and their languages such as <a href="https://www.w3schools.com/" target="_blank">w3schools.com</a>, <a href="https://www.htmldog.com/" target="_blank">htmldog.com</a> and <a href="https://developer.mozilla.org/en-US/" target="_blank">developer.mozilla</a>.</p>
+    <p class="a">while googling things will usually get you want you want, i also spent a lot of time on sites that have a lot of documentation when it comes to building websites and their languages such as <a href="https://www.w3schools.com/" target="_blank">w3schools.com</a>, <a href="https://www.htmldog.com/" target="_blank">htmldog.com</a> and <a href="https://developer.mozilla.org/en-US/" target="_blank">developer.mozilla</a>.</p>
 
-  <p>if you need more help, i have a <a href="/notebook/links/index.html">links</a> page where i link a ton of resources that i use. it might be overwhelming at first but once you get the hang of it, it won't be that hard. remember to have fun along the way! it will make the learning experience way more rewarding and less of a struggle.</p>
+    <p>if you need more help, i have a <a href="/notebook/links/index.html">links</a> page where i link a ton of resources that i use. it might be overwhelming at first but once you get the hang of it, it won't be that hard. remember to have fun along the way! it will make the learning experience way more rewarding and less of a struggle.</p>
 
 
-  <p id="2" class="q">what should i put on my personal website?</p>
-  <p class="a">the only person who should have a say on what goes on your <b>personal</b> website is... you! that is the entire magic of having a whole coding playground for yourself. so i can't really answer this one for you. sorry. ask yourself what <b>*you*</b> want from <b>your</b> site.</p>
-  <p class="a">if you happen to be overwhelmed by the endless options: make a list! write all of your ideas for your site and pick one you want to focus on at the moment.</p>
-  <p class="a">with all of that said, if you're just looking for inspiration, i recommend browsing other sites first. i get a lot of inspiration from my neighbors and other sites i stumble upon.</p>
-  <footer>
-   last updated on <b>28.oct.24</b>
-   <br>
-   <b>credit:</b> bunny chat pixel by <a href="https://foollovers.com/mat/plate32.html" target="_blank">foollovers</a>
-   <br>
-   <a href="#top">top</a> / <a href="/">home</a> / <a href="mailto:&#x6d;&#x65;&#x6f;&#x77;&commat;&#x64;&#x6f;&#x71;&#x6d;&#x65;&#x61;&#x74;&period;&#x63;&#x6f;&#x6d;">got another question?</a>
-  </footer>
- </main>
+    <p id="1" class="q">what should i put on my personal website?</p>
+    <p class="a">the only person who should have a say on what goes on your <b>personal</b> website is... you! that is the entire magic of having a whole coding playground for yourself. so i can't really answer this one for you. sorry. ask yourself what <b>*you*</b> want from <b>your</b> site.</p>
+    <p class="a">if you happen to be overwhelmed by the endless options: make a list! write all of your ideas for your site and pick one you want to focus on at the moment.</p>
+    <p class="a">with all of that said, if you're just looking for inspiration, i recommend browsing other sites first. i get a lot of inspiration from my neighbors and other sites i stumble upon.</p>
+    <footer>
+      last updated on <b>26.may.25</b>
+      <br>
+      <b>credit:</b> bunny chat pixel by <a href="https://foollovers.com/mat/plate32.html" target="_blank">foollovers</a>
+      <br>
+      <a href="#top">top</a> / <a href="/">home</a> / <a href="mailto:&#x6d;&#x65;&#x6f;&#x77;&commat;&#x64;&#x6f;&#x71;&#x6d;&#x65;&#x61;&#x74;&period;&#x63;&#x6f;&#x6d;">got another question?</a>
+    </footer>
+  </main>
 </body>
 
 </html>
