--- a/doqmeat/music/cds/index.html
+++ b/doqmeat/music/cds/index.html
@@ -23,9 +23,8 @@
 		<h1>CD collection</h1>
 
 		<p> <img src="/!g/deco/dj.gif" align="right"> aka my <b>album shelf</b>! nothing better in life than opening an album and playing the CD as you look through the booklet. the little things...</p>
-		<p>click on IMGs to open them on a new tab!</p>
-
-		<p>for my digital collection feel free to look at my <a href="https://bandcamp.com/lakitu" target="_blank">bandcamp</a> profile.</p>
+		<p id="cdsOwned"></p>
+		<p><small>for my digital collection feel free to look at my <a href="https://bandcamp.com/lakitu" target="_blank">bandcamp</a> profile.</small></p>
 		<!-- 	header end div -->
 	</header>
 
@@ -133,7 +132,15 @@
 		</div>
 		<!-- 			column 2 -->
 		<div class="column">
-
+			<div class="cd" style="border: none;"><img src="pics/rebellion-cd.jpg" alt="CD for rebellion OST">
+				<div class="hov">
+					<div class="caption">
+						<h3>puella magi madoka magica the movie : rebellion OST</h3>
+						<p>was included in the limited edition bluray of rebellion! awesome!</p>
+						<p><span class="date"> 29.may.25</span></p>
+					</div>
+				</div>
+			</div>
 
 			<div class="cd"><img src="pics/setsunapop%20(1).jpg" alt="cover for alterour setsuna pop">
 				<div class="hov">
@@ -412,14 +419,22 @@
 	<div id="home"><a class="i" title="go back to music page" href="/music"><img src="/!g/deco/cd.gif"></a></div>
 
 	<footer>
-		imgs on this page have been scanned by me unless stated otherwise! <img src="/!g/pix/musicnote1.gif"> <b>last updated on 02.jul.24</b>
+		imgs on this page have been scanned by me unless stated otherwise! <img src="/!g/pix/musicnote1.gif"> <b>last updated on 29.may.25</b>
 		<br>
 		<b>credit:</b> background is from yukika's soul lady photobook! / <a href="/notebook/links/fonts.html">fonts</a> used: natsuzemi, gaegu, spirit
 		<br>
 		<a href="#">top</a> <img src="/!g/pix/musicnote1.gif"> <a href="/">home</a> <img src="/!g/pix/musicnote1.gif"> <a href="/music">music</a> <img src="/!g/pix/musicnote1.gif"> <a href="fav-albums.html">fav albums</a> <img src="/!g/pix/musicnote1.gif"> <a href="/collection/index.html">collection</a> <img src="/!g/pix/musicnote1.gif"> <a href="/sitemap">sitemap</a>
 	</footer>
 
-
+	<script>
+	// shows amount of albums i have!
+		const cds = document.getElementsByClassName("cd");
+		const cdString = "i currently have " + cds.length + " albums!";
+		const cdP = document.getElementById("cdsOwned");
+		cdP.innerHTML = cdString;
+	</script>
 </body>
+
+</html>
 
 </html>
