added a new mail stamp to collection

--- a/doqmeat/collection/mail-stamps/index.html
+++ b/doqmeat/collection/mail-stamps/index.html
@@ -14,19 +14,7 @@ coded with love by des
 	<!-- tooltip shit -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
 	<script src="/!f/tooltip-jquary.js"></script>
-	<script>
-		(function($) {
-			$(document).ready(function() {
-				$("[title]").style_my_tooltips({
-					tip_follows_cursor: true,
-					tip_delay_time: 20,
-					tip_fade_speed: 20,
-					attribute: "title"
-				});
-			});
-		})(jQuery);
-
-	</script>
+	<script src="/!f/tooltip.js"></script>
 	<!--  end of tooltip shit -->
 </head>
 
@@ -45,6 +33,7 @@ coded with love by des
 				<img src="!g/cacti-2019.jpg" alt="top down view of cactus with a flower on the top. from 2018">
 			</div>
 			<div class="column">
+				<img title="new!" src="!g/bridge.jpg" alt="presorted first-class stamp">
 				<img src="!g/global-cacti-2017.png" alt="global stamp. from 2017">
 				<img src="!g/dragon.jpg" alt="cartoony dragon over a castle breathing fire. from 2019">
 			</div>
@@ -54,7 +43,7 @@ coded with love by des
 				<img src="!g/us-flag.jpg" alt="3 usa flags">
 			</div>
 			<div class="column">
-				<img title="new!" src="!g/240621-sunflower.png" alt="2022 global stamp with a sunflower">
+				<img src="!g/240621-sunflower.png" alt="2022 global stamp with a sunflower">
 				<img src="!g/rabbit.jpg" alt="rabbit">
 				<img src="!g/uk-queen.jpg" alt="the queen from england">
 			</div>
@@ -66,7 +55,7 @@ coded with love by des
 		</div>
 
 		<footer>
-			<b>last updated on: 21.jun.24</b>
+			<b>last updated on: 29.may.25</b>
 			<br>
 			<b>credit:</b> bg img by <a href="https://www.pexels.com/photo/brown-wooden-gate-and-green-leafed-tree-63743/" target="_blank">donald tong on pexels</a> / <a href="/notebook/links/fonts.html">fonts</a> used: simple, garden script.
 			<br>
