--- a/doqmeat/collection/index.html
+++ b/doqmeat/collection/index.html
@@ -31,11 +31,10 @@ https://coolors.co/fbeaf0-f48286-f04a4f-fedfcf
 				<li><a title="WARNING! page contains flashing gifs, while not a ton or fast-paced, i still figured a warning is nice" href="internet-graphics/index.html">internet graphics</a></li>
 				<li><a href="cats/index.html">cat pics</a></li>
 				<li><a href="mail-stamps/index.html">mail stamps</a></li>
-				<li><a href="plushies/index.html">plushies</a> <img src="/!g/pix/new1.gif"></li>
+				<li><a href="plushies/index.html">plushies</a></li>
 				<li><a href="/music/cds/index.html">CDs</a></li>
 				<li><a href="stickers/index.html">stickers</a></li>
 				<li>picrews</li>
-				<li>quotes</li>
 			</ul>
 			<!-- 		container end div -->
 		</div>
