updated journal archive and button wall

--- a/doqmeat/sites/index.html
+++ b/doqmeat/sites/index.html
@@ -232,6 +232,7 @@
 			<a href="https://bluemeadows.moe" target="_blank"><img src="https://bluemeadows.moe/images/bluemeadows_88x31.gif" alt="visit bluemeadows.moe"></a>
 			<a href="https://hazilysora.neocities.org/" target="_blank" title="hazilysora"><img src="!g/hazilysora.png" alt="hazilysora"></a>
 			<a href="https://pux.nehukon.de/" target="_blank" title="puxped"><img src="!g/puxped.svg" alt="puxped"></a>
+			<a title="nathanntan" href="https://nathanntan.neocities.org/" target="_blank"><img src="!g/nathanntan.png"></a>
 		</div>
 
 		<a href="https://mewmiu.blog.fc2.com" target="_blank"><img src="https://blog-imgs-169.fc2.com/m/e/w/mewmiu/stamp.png"></a>
