--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -156,11 +156,11 @@ finished on 02.mar.25 -->
 						<span id="statuscafe-username"></span>
 						<span id="statuscafe-content"></span>
 					</p>
-					<p><span class="title">playing: </span> bloodborne, overwatch, infinity nikki</p>
-					<p><span class="title">watching: </span> the rehearsal (season 2)</p>
+					<p><span class="title">playing: </span> bloodborne, overwatch 2, infinity nikki</p>
+					<!-- <p><span class="title">watching: </span> </p> -->
 					<p><span class="title">reading: </span> official bloodborne strategy guide, JS for dummies</p>
-					<p><span class="title">working on: </span> making minor improvements around here and coding some side stuff, having a fun summer break!</p>
-					<p class="date">last updated: 25.may.25</p>
+					<p><span class="title">working on: </span> making minor improvements around here, having a fun summer break!</p>
+					<p class="date">last updated: 30.may.25</p>
 				</section>
 				<section class="notepad-boxes" id="webrings">
 					<h3>webrings</h3>
