bloodborne and infinity nikki logs

--- a/doqmeat/vgs/games/bloodborne/index.html
+++ b/doqmeat/vgs/games/bloodborne/index.html
@@ -24,13 +24,15 @@
 		<div class="info"><b>developer: </b> from software</div>
 		<div class="info"><b>genre/type: </b> action adventure, rpg, horror</div>
 		<div class="info"><b>links: </b>
-			<a href="https://www.bloodborne-wiki.com" target="_blank">wiki</a>,
-			<a href="https://archive.org/details/bloodborne-collectors-edition-guide/mode/2up" target="_blank">strategy guide</a>,
+			<a href="https://www.bloodborne-wiki.com" target="_blank">bloodborne-wiki</a>,
+			<a title="archive.org pdf" href="https://archive.org/details/bloodborne-collectors-edition-guide/mode/2up" target="_blank">strategy guide</a>,
 			<a title="archive.org pdf" href="https://archive.org/details/artbook-Bloodborne_Official_Artworks/mode/2up" target="_blank">artbook</a>
 		</div>
 		<br>
 		<!-- // have character stats here! -->
 		<h3>logs</h3>
+		<p><span class="date">30.may.25</span> <b>I BEAT THE 3 BROS</b>. i am finally back where i was when my PS4 stopped working! i might explore the forbidden woods before diving deeper into new territory though cus i'm missing some items from that area. i feel like i'm starting to get a bit more of confidence with this game... slowly but surely.</p>
+		<hr>
 		<p><span class="date">25.may.25</span> leveled up 3 times and also went to the clinic and to the castle. i love playing this game and its story and the setting but i also forget how scary playing it is for me <img src="https://doqmeat.com/!g/pix/emote1crying.gif" alt=""> which makes me get really tense at times and even find the game a bit exhausting to play as well.... wish i was built different but i am not <img src="https://doqmeat.com/!g/pix/emote13dots.gif" alt=""> so i downloaded the <i>official strategy guide</i> into my tablet and that has helped out a bit with my overall anxiousness while playing. i honestly just need to unclench and stop being so scared of dying in a game where dying is literally one of the core mechanics.</p>
 		<hr>
 		<p><span class="date">22.may.25</span> WE ARE SO BACK???? i bought a <a href="../../hardware/#PS5">PS5</a> recently and i am SO ready to dive into this world again. lucky for me, since i had PS+ at that time <b>most of my saved data</b> was able to be uploaded to the cloud storage. the only bad news is that it seems that a portion of what i last played did not seem to upload to the cloud. i noticed this when i noticed i was missing the castle cainhurst lantern and the lantern you get when you kill the 3 bros <b>THAT I HAD FOUGHT WITH SWEAT AND TEARS...</b> so i got some exploring to do at the current moment before i get to where i was!</p>
