--- a/doqmeat/vgs/games/infinity-nikki/index.html
+++ b/doqmeat/vgs/games/infinity-nikki/index.html
@@ -26,6 +26,12 @@
     <br>
     <!-- // have character stats here! -->
     <h3>logs</h3>
+    <p><span class="date">30.may.25</span> some outfits! i met some frog people and they are so cute!</p>
+    <img src="blue (1).jpg" alt="infinity nikki screenshots" width="100%">
+    <img src="blue (2).jpg" alt="infinity nikki screenshots" width="100%">
+    <img title="honey outfit... the panda is very cute too" src="honey.jpg" alt="infinity nikki screenshots" width="100%">
+    <img src="green-pink.jpg" alt="infinity nikki screenshots" width="100%">
+    <hr>
     <p><span class="date">25.may.25</span> dipped my toes into the nikki universe since now i own something that can run it. fuck. once again i am promising to myself and to the world that i will not spend real money on this game. anyways. it looks very cute and it is what it is: a cute and somewhat entertaining game about collecting things. that's honestly good enough for me inbetween my <a href="../bloodborne/index.html">bloodborne</a> breaks. as a sucker for fashion in games, i <em>love</em> the photo and fashion options alike! butfrom the looks of it , i already know the best fits will be behind that gacha system. as always.</p>
     <p>anyway. here's some pics with my friend the panda. the other one is me!</p>
     <img src="panda (1).jpg" width="100%" alt="infinity nikki screenshots">
