--- a/doqmeat/vgs/info.html
+++ b/doqmeat/vgs/info.html
@@ -54,7 +54,8 @@
 		<h2>changelog</h2>
 
 		<div id="log">
-			<li>25.may.25: log <a href="games/bloodborne/index.html">bloodborne</a> + new game: <a href="games/infinity-nikki/index.html">infinity nikki</a></li>
+			<li>30.may.25: log: <a href="games/bloodborne/index.html">bloodborne</a> + <a href="games/infinity-nikki/index.html">infinity nikki</a></li>
+			<li>25.may.25: log <a href="games/bloodborne/index.html">bloodborne</a> + new: <a href="games/infinity-nikki/index.html">infinity nikki</a></li>
 			<li>22.may.25: log: <a href="games/bloodborne/index.html">bloodborne</a> + added <a href="hardware/index.html#PS5">PS5</a> to hardware</li>
 			<li>01.feb.25: new: <a href="games/balatro/index.html">balatro</a></li>
 			<li>17.jan.25: log: <a href="games/fallout-new-vegas/index.html">fallout new vegas</a></li>
@@ -68,6 +69,7 @@
 
 		<h2>add me!</h2>
 		<ul style="text-align: left;">
+			<li><b>PSN:</b> doqmeat</li>
 			<li><a href="https://steamcommunity.com/id/lakiitu/" target="_blank" class="outlink">steam</a></li>
 			<li><b>3DS (pretendo):</b> 5427-1045-8513</li>
 			<li><b>switch:</b> 3336-0516-7511</li>
