added dualsense pic

--- a/doqmeat/vgs/hardware/index.html
+++ b/doqmeat/vgs/hardware/index.html
@@ -21,6 +21,7 @@
     <nav>table of contents: <a href="#ps5">PS5</a> - <a href="#3ds">3DS</a> - <a href="#switch-lite">switch lite</a> - <a href="#ps4">PS4</a> - <a href="#wii-u">wii u</a></nav>
     <h2 id="PS5">PS5</h2>
     <p><span class="date">20.may.25</span> i got a tiny bit of money recently that i could spend on whatever so i made the decision to get myself a PS5. i've always been very okay with my <a href="#PS4">PS4</a>. if it wasn't for the wifi/bluetooth chip being broken, i wouldn't have bought a PS5 in the first place.</p>
+    <img title="my dualsense cover from geekshare :3" src="dualsense (1).png" onmouseover="this.src='dualsense (2).png';" onmouseout="this.src='dualsense (1).png';" alt="dualsense controller with a pink cat themed cover from geekshare" style="float:right;width:40%;">
     <p>like mentioned, i rarely play just released AAA games which is why i don't really have that many games in my playstation library. i mostly play indie games which i play either on my <a href="#switch">switch</a> or my laptop.</p>
     <p>but despite this, i figured that it would be nice to get it either way because:</p>
     <ul>
