--- a/doqmeat/vgs/games/infinity-nikki/index.html
+++ b/doqmeat/vgs/games/infinity-nikki/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>bloodborne</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>infinity nikki</title>
   <link rel="icon" type="image/x-icon" href="/vgs/favicon.gif">
   <link href="/vgs/body.css" rel="stylesheet" type="text/css" media="all">
   <link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
