minor update to gaming log

--- a/doqmeat/vgs/index.html
+++ b/doqmeat/vgs/index.html
@@ -47,24 +47,19 @@ coded with love by des
 			<center>
 				<button class="btn active" onclick="filterSelection('all')">show all</button>
 				<button class="btn" onclick="filterSelection('fav')">favs</button>
-				<button class="btn" onclick="filterSelection('currently')">currently</button>
-				<button class="btn" onclick="filterSelection('toplay')">to play</button>
-				<button class="btn" onclick="filterSelection('finished')">finished</button>
-				<button class="btn" onclick="filterSelection('notdone')">not finished</button>
-				<div>
-					<button class="btn g" onclick="filterSelection('horror')">horror</button>
-					<button class="btn g" onclick="filterSelection('adv')">adventure</button>
-					<button class="btn g" onclick="filterSelection('action')">action</button>
-					<button class="btn g" onclick="filterSelection('shooter')">shooter</button>
-					<button class="btn g" onclick="filterSelection('puzzle')">puzzle</button>
-					<button class="btn g" onclick="filterSelection('plat')">platformer</button>
-					<button class="btn g" onclick="filterSelection('rpg')">role playing</button>
-					<button class="btn g" onclick="filterSelection('sim')">simulation</button>
-					<button class="btn g" onclick="filterSelection('vn')">visual novel</button>
-					<button class="btn g" onclick="filterSelection('cat')">cats</button>
-					<button class="btn g" onclick="filterSelection('rhythm')">rhythm</button>
-					<button class="btn g" onclick="filterSelection('online')">online</button>
-				</div>
+				<button class="btn g" onclick="filterSelection('horror')">horror</button>
+				<button class="btn g" onclick="filterSelection('adv')">adventure</button>
+				<button class="btn g" onclick="filterSelection('action')">action</button>
+				<button class="btn g" onclick="filterSelection('shooter')">shooter</button>
+				<button class="btn g" onclick="filterSelection('puzzle')">puzzle</button>
+				<button class="btn g" onclick="filterSelection('plat')">platformer</button>
+				<button class="btn g" onclick="filterSelection('rpg')">role playing</button>
+				<button class="btn g" onclick="filterSelection('sim')">simulation</button>
+				<button class="btn g" onclick="filterSelection('vn')">visual novel</button>
+				<button class="btn g" onclick="filterSelection('cat')">cats</button>
+				<button class="btn g" onclick="filterSelection('rhythm')">rhythm</button>
+				<button class="btn g" onclick="filterSelection('online')">online</button>
+
 			</center>
 		</div>
 
@@ -74,7 +69,7 @@ coded with love by des
 		<div class="thumb finished sim">
 			<a title="animal crossing new horizons" href="games/acnh/index.html" target="log"><img src="games/acnh/cover.jpg" tabindex="0"></a>
 		</div>
-		<div class="thumb notdone">
+		<div class="thumb finished">
 			<a title="balatro" href="games/balatro/index.html" target="log"><img src="games/balatro/cover.jpg" tabindex="0"></a>
 		</div>
 		<div class="thumb notdone cat puzzle">
@@ -155,13 +150,10 @@ coded with love by des
 		<div class="thumb currently online">
 			<a title="infinity nikki" href="games/infinity-nikki/index.html" target="log"><img src="games/infinity-nikki/cover.jpg" tabindex="0" alt="infinity nikki page link"></a>
 		</div>
-		<div class="thumb toplay">
-			<a title="jet set radio" href="games/jet-set-radio/index.html" target="log"><img src="games/jet-set-radio/cover.jpg" tabindex="0"></a>
-		</div>
 		<div class="thumb cat fav adv finished">
 			<a title="journey" href="games/journey/index.html" target="log"><img src="games/journey/cover.jpg" tabindex="0"></a>
 		</div>
-		<div class="thumb notdone platformer">
+		<div class="thumb finished platformer">
 			<a title="kirby planet robobot" href="games/kirby-planet-robobot/index.html" target="log"><img src="games/kirby-planet-robobot/cover.jpg" alt="kirby planet robobot" tabindex="0"></a>
 		</div>
 		<div class="thumb finished vn horror">
