--- a/doqmeat/vgs/info.html
+++ b/doqmeat/vgs/info.html
@@ -47,14 +47,15 @@
 	<main>
 		<h1>doqmeat's gaming log</h1>
 		<p class="hide"><img src="/!g/pix/caution1.gif"> <a href="/vgs" target="_parent">click here to go to index page</a> if you're out of frame!</p>
-		<p>sharing my thoughts, progress, and screenshots of video games i've played!</p>
-		<p><b>subpages:</b> <a href="spreadsheet.html">spreadsheet</a> / <a href="hardware/index.html">hardware</a></p>
-		<p>spoilers will be <span class="spoiler">hidden!</span></p>
+		<p>sharing my thoughts, progress, and screenshots of video games i've played! spoilers will be <span class="spoiler">hidden!</span></p>
+		<p>here's my <a href="https://backloggd.com/u/doqmeat/" target="_blank" class="outlink">backloggd acc</a> for a comprehensive list of everything i've played / completed / want to play / etc!</p>
+		<p><b>subpages:</b> <a href="hardware/index.html">hardware</a></p>
 		<p>click on a <mark>video game thumbnail and content will appear here!</mark></p>
 
 		<h2>changelog</h2>
 
 		<div id="log">
+			<li>1.jun.25: archived my spreadsheet page and added a link to my <a href="https://backloggd.com/u/doqmeat/" target="_blank" class="outlink">backlogged account</a>! it will be my primary way of tracking games from now on. + log: <a href="games/kirby-planet-robobot/index.html">kirby planet robobot</a></li>
 			<li>30.may.25: log: <a href="games/bloodborne/index.html">bloodborne</a> + <a href="games/infinity-nikki/index.html">infinity nikki</a></li>
 			<li>25.may.25: log <a href="games/bloodborne/index.html">bloodborne</a> + new: <a href="games/infinity-nikki/index.html">infinity nikki</a></li>
 			<li>22.may.25: log: <a href="games/bloodborne/index.html">bloodborne</a> + added <a href="hardware/index.html#PS5">PS5</a> to hardware</li>
