--- a/doqmeat/music/info.html
+++ b/doqmeat/music/info.html
@@ -27,19 +27,20 @@
 
 		<p>one of my most precious memories is making lists of songs i wanted my dad to download on my mp3 player when i was little. throughout my entire life, i have always been accompanied by music, it is something deeply important to me! ♪(´▽｀)</p>
 
-		<p>i wanted to have a space where i can talk a little bit about the stuff i like to listen to!</p>
-
 		<p>feel free to send me a recommendation through <a title="&#x6d;&#x65;&#x6f;&#x77;&commat;&#x64;&#x6f;&#x71;&#x6d;&#x65;&#x61;&#x74;&period;&#x63;&#x6f;&#x6d;" href="mailto:&#x6d;&#x65;&#x6f;&#x77;&commat;&#x64;&#x6f;&#x71;&#x6d;&#x65;&#x61;&#x74;&period;&#x63;&#x6f;&#x6d;" target="_blank">e-mail</a> or down below on my recommendation box! i will gladly listen to it whenever i have some time. i love discovering new music <img src="/!g/pix/catroll.gif"></p>
 
 		<center><img src="/!g/deco/jermamusic.gif"></center>
 
 		<h3>stuff</h3>
 		<!-- make it so when i hover over the headphone names, a pic pops up -->
+		<p>i'll always try to get the <a title="my CD collection" href="cds.html" target="_blank">CDs</a> of my favorite releases. i love getting albums because i actually use with alongside my battery powered CD player whenever the power goes out. <small>thank you Puerto Rico.</small></p>
+
 		<p><b>headphones</b> i like using are the <i>razer kraken kitty headset</i> <small>they are the best sounding headphones i've ever had tbh</small>, and <i>JBL tune 720bt</i> for when i prefer using bluetooth.</p>
-		<p>itunes annoyed the fuck out of me one day so i switched to <a href="https://getwacup.com/" target="_blank">WACUP</a> for my <b>music player</b> and i've never looked back. look how cute...</p>
+		<p><a href="https://getwacup.com/" target="_blank">WACUP</a> is my favorite <b>music player</b> for desktop. look how cute...</p>
+
 		<center><img src="!g/index/wacup.jpg" alt="a screenshot of my wacup music player" width="90%"></center>
 
-		<p>when it comes to <b>streaming</b> stuff, i use bandcamp, youtube or <a title="this open source project literally saved my life" href="https://github.com/anandnet/Harmony-Music" target="_blank" class="outlink">harmony music</a> on my phone :) if i enjoy an album or EP A LOT i'll try to get the <a title="my CD collection" href="cds.html" target="_blank">CD</a> if my bank acc lets me.</p>
+		<p>when it comes to <b>streaming</b> stuff, i use bandcamp, youtube or <a title="this open source project literally saved my life" href="https://github.com/anandnet/Harmony-Music" target="_blank" class="outlink">harmony music</a> on my phone :)</p>
 
 		<h3>misc</h3>
 		<p>i run a <a title="currently a WIP!" href="https://siinamota.doqmeat.com/" target="_blank" class="outlink">siinamota fansite</a>, he is my favorite vocaloid producer and i highly recommend his stuff if you enjoy vocaloid. i also run the <a href="https://siinamota.doqmeat.com/bot" target="_blank" class="outlink">siinamota song bot</a> on twitter.</p>
@@ -47,9 +48,9 @@
 
 		<h3>important dates</h3>
 
-		<li>got into into kpop around 2019 with loona as my introduction.</li>
-		<li>got into vocaloid around 2022 because of siinamota's music.</li>
-		<li>16.feb.22 - met yukika on a fancall</li>
+		<li>2019 - got into into kpop with loona as my introduction.</li>
+		<li>2022 - got into vocaloid because of siinamota's music.</li>
+		<li>16.feb.22 - met yukika on a fancall! </li>
 		<li>7.feb.23 - went to my first concert ever! it was a kpop boy group: ONEUS</li>
 		<li>21.mar.24 - went to my first orchestra! it was lovely <img src="/!g/pix/hearts-f.gif"></li>
 
