--- a/doqmeat/about/index.html
+++ b/doqmeat/about/index.html
@@ -128,7 +128,7 @@
 		<div class="borderwrap">
 			<div class="wrapper-in padding">
 				<p><img title="this is me btw" src="/!g/deco/silly-cat.gif" align="left" style="margin-right:5px;" width="25%">
-					the name is <mark>des</mark> <a title="click for source!" href="https://caitsith.neocities.org/graphics1" target="_blank"><img src="!g/bi.gif" alt="bi pixel flag"><img src="!g/nonbinary.gif" alt="nonbinary pixel flag"></a> i'm a 24 years old from puerto rico. fluent in english and spanish. he / she <u title="él / ella en español">*</u> pronouns. computer science student interested in web development and web design <img src="/!g/pix/heart4.png" alt=""> i love life</p>
+					the name is <mark>des</mark> <a title="click for source!" href="https://caitsith.neocities.org/graphics1" target="_blank"><img src="!g/bi.gif" alt="bi pixel flag"><img src="!g/nonbinary.gif" alt="nonbinary pixel flag"></a> i'm a 25 year old from puerto rico. fluent in english and spanish. he / she <u title="él / ella en español">*</u> pronouns. computer science student interested in web development and web design <img src="/!g/pix/heart4.png" alt=""> i love life</p>
 
 				<p>（*＾-＾*）this is also me -&gt; <img src="/collection/internet-graphics/!g/silly-blinkie.gif" style="max-width:100%;" alt="silly blinkie :3"></p>
 
@@ -359,9 +359,10 @@
 				<li><a title="all of my projects have repositories here!" href="https://github.com/doqmeat" target="_blank">github</a></li>
 				<li><a title="here til the site gets inevitably nuked" href="https://twitter.com/sepiarecord999" target="_blank">twitter</a></li>
 				<li><a title="i LOVE logging on what i listen to" href="https://rateyourmusic.com/~doqmeat" target="_blank">rate your music</a></li>
-				<li><a href="https://doqmeats.tumblr.com/" target="_blank">tumblr</a></li>
 				<li><a title="i LOVE logging on what i watch" href="https://letterboxd.com/Iakitu/" target="_blank">letterboxd</a></li>
-				<li><a title="might be using it again" href="https://www.youtube.com/@doqmeat" target="_blank">youtube</a></li>
+				<li><a title="i LOVE logging on what i play" href="https://backloggd.com/u/doqmeat/" target="_blank">backloggd</a></li>
+				<li><a href="https://doqmeats.tumblr.com/" target="_blank">tumblr</a></li>
+				<li><a title="i upload stuff every now and then" href="https://www.youtube.com/@doqmeat" target="_blank">youtube</a></li>
 				<li><a title="you can support me here!" href="https://ko-fi.com/doqmeat" target="_blank">ko-fi</a></li>
 			</div>
 		</div>
